test/types/type_variables/bharshbarg/illegalFieldQuery.good
illegalFieldQuery.chpl:8: In function 'foo':
illegalFieldQuery.chpl:8: error: invalid query -- queried field must be a type or parameter
